--- a/rules/deploy_diplomovka_docker_app.yaml
+++ b/rules/deploy_diplomovka_docker_app.yaml
@@ -17,7 +17,7 @@ action:
     # Parametre posielane v payloade webhook-u
     app_version: "{{ trigger.body.app_version }}"
     app: "{{ trigger.body.app_artifact_id }}"
-    docker_host: "diplomovka-app-01"
+    docker_host: "diplomovka-app-0*"
     env: "(BASE)"
     project_tag: "DIPLOMOVKA"
     saltmaster: "diplomovka-ops"
