--- a/rules/deploy_diplomovka_docker_app.yaml
+++ b/rules/deploy_diplomovka_docker_app.yaml
@@ -21,6 +21,6 @@ action:
     env: "(BASE)"
     project_tag: "DIPLOMOVKA"
     saltmaster: "diplomovka-ops"
-    dockercompose_path: "/opt/diplomovka_compose"
+    dockercompose_path: "/opt/diplomovka_docker_app"
     docker_repository: "therdvn"
   ref: "st2_diplomovka_app.deploy_docker_app.yaml"
