pridanie default hodnoty docker_repository

--- a/actions/deploy_docker_app.yaml
+++ b/actions/deploy_docker_app.yaml
@@ -33,6 +33,7 @@ parameters:
   docker_repository:
     type: "string"
     required: true
+    default: "therdvn"
   dockercompose_path:
     type: "string"
     required: true
