pridanie notify channel & fixes

--- a/actions/deploy_docker_app.yaml
+++ b/actions/deploy_docker_app.yaml
@@ -41,3 +41,6 @@ parameters:
     type: "boolean"
     required: true
     default: false
+  notify_channel:
+    type: "string"
+    required: true
