--- a/rules/deploy_diplomovka_docker_app.yaml
+++ b/rules/deploy_diplomovka_docker_app.yaml
@@ -23,4 +23,5 @@ action:
     saltmaster: "diplomovka-ops"
     dockercompose_path: "/opt/diplomovka_docker_app"
     docker_repository: "therdvn"
+    notify_channel: "diplomova-praca"
   ref: "st2_diplomovka_app.deploy_docker_app"
