slack webhook cez st2kv

--- a/actions/deploy_docker_app.yaml
+++ b/actions/deploy_docker_app.yaml
@@ -41,6 +41,9 @@ parameters:
     type: "boolean"
     required: true
     default: false
+  slack_webhook:
+    type: "string"
+    required: true
   notify_channel:
     type: "string"
     required: true
